# homeassistant-lidl-plus

./: .devcontainer.json  .gitignore  .ruff.toml  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: lint.yml
config/: configuration.yaml
custom_components/lidl_plus/: __init__.py  activate_coupons.py  api.py  config_flow.py  const.py  coordinator.py  coupon_helpers.py  data.py  exceptions.py  manifest.json  sensor.py  services.yaml
custom_components/lidl_plus/translations/: en.json
scripts/: auth.py  develop
tests/: __init__.py  conftest.py  test_activate_coupons.py  test_api.py  test_coordinator.py  test_coupon_helpers.py  test_sensor.py
