[project]
name = "homeassistant-lidl-plus"
version = "0.1.0"
description = "Lidl Plus integration for Home Assistant"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp",
    "colorlog==6.9.0",
    "homeassistant==2025.2.4",
    "ruff==0.9.6",
]

[project.optional-dependencies]
auth = [
    "playwright>=1.40.0",
    "requests>=2.28.1",
]

[project.scripts]
lidl-plus-auth = "scripts.auth:main"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "playwright>=1.40.0",
    "requests>=2.28.1",
]
